--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,17 @@
 include vtkplotter_examples/*
+include vtkplotter_examples/advanced/*
+include vtkplotter_examples/basic/*
+include vtkplotter_examples/notebooks/*
+
+include vtkplotter_examples/other/*
+include vtkplotter_examples/other/dolfin/*
+include vtkplotter_examples/other/dolfin/noplot/*
+include vtkplotter_examples/other/trimesh/*
+
+include vtkplotter_examples/plotting2d/*
+include vtkplotter_examples/simulations/*
+include vtkplotter_examples/volumetric/*
+
 include vtkplotter_examples/data/*
 include vtkplotter_examples/data/images/*
 include vtkplotter_examples/data/timecourse1d/*
